# fmcardgen

./: .gitignore  README.md  mypy.ini  pyproject.toml
.github/workflows/: actions.yaml
fmcardgen/: cli.py  config.py  draw.py  frontmatter.py
src/fmcardgen/: config.py  draw.py
tests/: config.json  config.toml  config.yml  example.md  test_cli.py  test_config.py  test_draw.py  test_frontmatter.py
tests/example-bundle/: index.md
